[gd_scene load_steps=35 format=2]

[ext_resource path="res://FallingPlattform.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://PixelAdventure/Background/Purple.png" type="Texture" id=3]
[ext_resource path="res://PixelAdventure/Background/Blue.png" type="Texture" id=4]
[ext_resource path="res://PixelAdventure/Background/Yellow.png" type="Texture" id=5]
[ext_resource path="res://Game.gd" type="Script" id=6]
[ext_resource path="res://PixelAdventure/Background/Brown.png" type="Texture" id=7]
[ext_resource path="res://PixelAdventure/Background/Pink.png" type="Texture" id=8]
[ext_resource path="res://PixelAdventure/Background/Gray.png" type="Texture" id=9]
[ext_resource path="res://PixelAdventure/Background/Green.png" type="Texture" id=10]
[ext_resource path="res://Collectable.tscn" type="PackedScene" id=11]
[ext_resource path="res://PixelAdventure/Items/Froschkoenig_selbst_erstellt/EineGoldeneKugel.png" type="Texture" id=12]
[ext_resource path="res://PixelAdventure/Menu/Text/PressStart2P-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://HUD.gd" type="Script" id=14]
[ext_resource path="res://world_tileset.tres" type="TileSet" id=15]
[ext_resource path="res://PixelAdventure/Menu/Icons/Herz_Icon.png" type="Texture" id=16]
[ext_resource path="res://tiles_oneway.tres" type="TileSet" id=17]
[ext_resource path="res://MovingPlatform.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scripts/Enemy_AI.tscn" type="PackedScene" id=19]
[ext_resource path="res://Enemy_Stone.tscn" type="PackedScene" id=20]
[ext_resource path="res://Enemy_Projectile.tscn" type="PackedScene" id=21]
[ext_resource path="res://Sounds/magical_theme.wav" type="AudioStream" id=22]

[sub_resource type="TileSet" id=1]
0/name = "Blue"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Brown"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Gray"
2/texture = ExtResource( 9 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "Green"
3/texture = ExtResource( 10 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "Pink"
4/texture = ExtResource( 8 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "Purple"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "Yellow"
6/texture = ExtResource( 5 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 13 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25.53, 3.83688 )

[sub_resource type="Animation" id=5]
resource_name = "LR"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 140, 269 ), Vector2( 140, 269 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "LR"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 93, -723 ), Vector2( 252, -723 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 244, 8 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.219608 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 13 )

[node name="Node2D" type="Node2D"]
position = Vector2( 190.438, 128.79 )
scale = Vector2( -1432.13, 24.0619 )

[node name="Game" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Background" type="TileMap" parent="Game"]
tile_set = SubResource( 1 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 3, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 3, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 3, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 196608, 3, 0, 196609, 3, 0, 196610, 3, 0, 196611, 3, 0, 196612, 3, 0, 196613, 3, 0, 196614, 3, 0, 196615, 3, 0, 196616, 3, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 3, 0, 196621, 3, 0, 196622, 3, 0, 196623, 3, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 262144, 2, 0, 262145, 2, 0, 262146, 3, 0, 262147, 3, 0, 262148, 3, 0, 262149, 3, 0, 262150, 3, 0, 262151, 3, 0, 262152, 3, 0, 262153, 3, 0, 262154, 3, 0, 262155, 3, 0, 262156, 3, 0, 262157, 3, 0, 262158, 3, 0, 262159, 3, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, 3, 0, 262166, 3, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0 )

[node name="Instructions" type="Control" parent="Game"]
anchor_left = 0.000995191
anchor_right = 0.000995191
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpielzielPanel" type="Panel" parent="Game/Instructions"]
margin_left = 172.522
margin_top = 136.0
margin_right = 292.522
margin_bottom = 192.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spielziel" type="Label" parent="Game/Instructions/SpielzielPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -111.785
margin_top = 26.6749
margin_right = 16.2147
margin_bottom = 78.6749
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 0.694118 )
text = "Ziel: Erreiche das Schloss und sammle dabei alle Kugeln ein "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesOneWay" type="TileMap" parent="Game"]
position = Vector2( -1, 0 )
tile_set = ExtResource( 17 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( -3932136, 16, 0, -3473384, 16, 0, -2949117, 16, 0, -1048572, 16, 0, -1048569, 16, 0, 1245185, 16, 0, 1245188, 16, 0 )
__meta__ = {
"_editor_description_": ""
}

[node name="StaticBody2D" type="StaticBody2D" parent="Game/TilesOneWay"]
position = Vector2( 1377, -416 )
collision_layer = 2
collision_mask = 49

[node name="CollisionShape2D1" type="CollisionShape2D" parent="Game/TilesOneWay/StaticBody2D"]
position = Vector2( -1335.56, 722.339 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Game/TilesOneWay/StaticBody2D"]
position = Vector2( -1287.43, 722.228 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Game/TilesOneWay/StaticBody2D"]
position = Vector2( -1288, 164 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Game/TilesOneWay/StaticBody2D"]
position = Vector2( -1240, 164 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Game/TilesOneWay/StaticBody2D"]
position = Vector2( -1308.09, -300.14 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Game/TilesOneWay/StaticBody2D"]
position = Vector2( -967.381, -540.163 )
shape = SubResource( 4 )
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Game/TilesOneWay/StaticBody2D"]
position = Vector2( -967.381, -428.212 )
shape = SubResource( 4 )
one_way_collision = true

[node name="TilesSolid" type="TileMap" parent="Game"]
position = Vector2( -1, 0 )
tile_set = ExtResource( 15 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( 1048576, 36, 0, 1048583, 36, 0, 1048584, 0, 0, 1048585, 0, 1, 1048586, 0, 1, 1048587, 0, 1, 1048588, 0, 1, 1048589, 0, 1, 1048590, 0, 1, 1048591, 0, 1, 1114112, 36, 0, 1114119, 36, 0, 1114120, 0, 65536, 1114121, 0, 65537, 1114122, 0, 65537, 1114123, 0, 65537, 1114124, 0, 65537, 1114125, 0, 65537, 1114126, 0, 65537, 1114127, 0, 65537, 1179648, 36, 0, 1179655, 36, 0, 1179656, 0, 65536, 1179657, 0, 65537, 1179658, 0, 65537, 1179659, 0, 65537, 1179660, 0, 65537, 1179661, 0, 65537, 1179662, 0, 65537, 1179663, 0, 65537, 1245184, 36, 0, 1245191, 36, 0, 1245192, 0, 65536, 1245193, 0, 65537, 1245194, 0, 65537, 1245195, 0, 65537, 1245196, 0, 65537, 1245197, 0, 65537, 1245198, 0, 65537, 1245199, 0, 65537 )
__meta__ = {
"_editor_description_": ""
}

[node name="Collectables" type="Node2D" parent="Game"]

[node name="Collectable1" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 232.803, 239.363 )

[node name="Collectable2" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 112, -288 )

[node name="Collectable3" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 406.47, -24 )

[node name="Collectable4" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 96, 0 )

[node name="Collectable5" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 112, -208 )

[node name="Collectable6" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 254.665, -528 )

[node name="Collectable7" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 408, -976 )

[node name="Collectable8" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 178.804, -596 )

[node name="Collectable9" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 408, -864 )

[node name="Collectable10" parent="Game/Collectables" instance=ExtResource( 11 )]
position = Vector2( 341, -468 )

[node name="Enemies" type="Node2D" parent="Game"]

[node name="Enemy" parent="Game/Enemies" instance=ExtResource( 21 )]
position = Vector2( 253.843, -1167.97 )

[node name="Enemy_Stone" parent="Game/Enemies" instance=ExtResource( 20 )]
position = Vector2( 208, -136 )

[node name="Enemy_Stone2" parent="Game/Enemies" instance=ExtResource( 20 )]
position = Vector2( 352, -264 )

[node name="Enemy_Stone3" parent="Game/Enemies" instance=ExtResource( 20 )]
position = Vector2( 47.8864, -734.849 )

[node name="Platform" type="Node2D" parent="Game"]

[node name="MovingPlatform" parent="Game/Platform" instance=ExtResource( 18 )]
position = Vector2( 252.342, 224.426 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Game/Platform/MovingPlatform"]
playback_process_mode = 0
anims/LR = SubResource( 5 )

[node name="MovingPlatform2" parent="Game/Platform" instance=ExtResource( 18 )]
position = Vector2( 93, -723 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Game/Platform/MovingPlatform2"]
playback_process_mode = 0
anims/LR = SubResource( 6 )

[node name="FallingPlattform1" parent="Game/Platform" instance=ExtResource( 1 )]
position = Vector2( 332, -460 )

[node name="FallingPlattform2" parent="Game/Platform" instance=ExtResource( 1 )]
position = Vector2( 168, -588 )

[node name="FallingPlattform3" parent="Game/Platform" instance=ExtResource( 1 )]
position = Vector2( 244, -520 )

[node name="Enemy_AI" parent="Game" instance=ExtResource( 19 )]
position = Vector2( -1208, -844.968 )

[node name="Player" parent="Game" instance=ExtResource( 2 )]
position = Vector2( 57.9107, 285.964 )

[node name="Camera2D" type="Camera2D" parent="Game/Player"]
position = Vector2( 0.800995, 47.2675 )
current = true
zoom = Vector2( 0.9, 0.9 )
limit_left = 0
limit_top = 0
limit_right = 1700
limit_bottom = 321
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
editor_draw_limits = true

[node name="Area2D" type="Area2D" parent="Game"]
position = Vector2( 88, 208 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Area2D"]
position = Vector2( 583.303, -114.504 )
shape = SubResource( 7 )

[node name="HUD" type="CanvasLayer" parent="Game"]
script = ExtResource( 14 )

[node name="Panel" type="Panel" parent="Game/HUD"]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 232.0
margin_bottom = 49.0
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Game/HUD"]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 52.0
margin_bottom = 52.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x" type="Label" parent="Game/HUD"]
visible = false
margin_left = 44.0
margin_top = 24.0
margin_right = 52.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 9 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Collectables" type="Label" parent="Game/HUD"]
visible = false
margin_left = 56.0
margin_top = 16.0
margin_right = 136.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 10 )
text = "##/##"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Game/HUD"]
visible = false
margin_left = 148.0
margin_top = 12.0
margin_right = 180.0
margin_bottom = 44.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x2" type="Label" parent="Game/HUD"]
visible = false
margin_left = 180.0
margin_top = 24.0
margin_right = 188.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 9 )
text = "x"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifes" type="Label" parent="Game/HUD"]
visible = false
margin_left = 192.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 11 )
text = "##"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="Game/HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -64.0
margin_right = 112.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Super! Du hast alle Gegenstände eingesammelt!"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelMusic" type="AudioStreamPlayer" parent="Game"]
stream = ExtResource( 22 )
pitch_scale = 0.92
autoplay = true

[connection signal="collectable_collected" from="Game/Collectables/Collectable1" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable2" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable3" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable4" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable5" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable6" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable7" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable8" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable9" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="collectable_collected" from="Game/Collectables/Collectable10" to="Game/HUD" method="_on_collectable_collected"]
[connection signal="player_hit" from="Game/Player" to="Game/HUD" method="_on_Player_player_hit"]
[connection signal="body_entered" from="Game/Area2D" to="Game" method="_on_Area2D_body_entered"]
